--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "| 个人简历 |",
   "main": "index.js",
   "scripts": {
+    "start": "static",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --config ./src/webpack.config.js",
     "watch": "onchange 'src/**/*.js' 'src/**/*.less' -- npm run webpack"
@@ -31,5 +32,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-notifier": "^1.5.0"
+  },
+  "dependencies": {
+    "static": "^2.0.0"
   }
 }
